# CordraPy

./: .gitignore  pyproject.toml  setup.py
cordra/: __init__.py  cordra.py
cordrapy/: __init__.py  cordra.py  response.py  session.py
docs/source/: conf.py  cordra.rst  index.rst  modules.rst
examples/: example-payloads.ipynb
