[tool.poetry]
name = "cordrapy"
version = "0.1.0"
description = "Cordra Client for Python"
authors = ["Camilo Velez <camilo.velezramirez@nist.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
